<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/avatar_room"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_color"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/tv_name_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name_meeting"
            android:inputType=""
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <Spinner
            android:id="@+id/spinnerRoomMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/tv_date_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:hint="@string/date_meeting"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/tv_time_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:hint="@string/time_meeting"
            android:inputType="time"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/tv_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/person_list"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:imeOptions="actionDone"
            android:autofillHints="emailAddress" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

        </com.google.android.material.chip.ChipGroup>

        <Button
            android:id="@+id/btn_create_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/créer"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</ScrollView>