<resources>
    <string name="app_name">MaRéu</string>
    <string name="time_meeting">Heure de la réunion</string>
    <string name="date_meeting">Date de la réunion</string>
    <string name="name_meeting">Nom de la réunion</string>
    <string name="person_list">liste des participants</string>
    <string name="créer">Créer</string>
    <string name="liste_des_participants">Liste des participants</string>
    <string name="séparateur">-</string>
    <string name="filter_room" />
    <string name="filter" />
    <string name="par_salle">Par Salle</string>
    <string name="par_date">Par Date</string>
    <string name="by_all">Liste entière</string>
    <string name="ok">Ok</string>
    <string name="annuler">Annuler</string>

    <string-array name="room_array">
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 4</item>
        <item>Salle 5</item>
        <item>Salle 6</item>
        <item>Salle 7</item>
        <item>Salle 8</item>
        <item>Salle 9</item>
        <item>Salle 10</item>
    </string-array>
</resources>